--- a/client/ep.html
+++ b/client/ep.html
@@ -46,7 +46,7 @@
     {{#if hasDoc}} 
         {{#if hasParts}} 
             <span class="unselectable">
-                <span id="iconActionPlusDefault" class="icon">&nbsp;</span>
+                <span id="iconActionPlusDefault" class="icon" title="ADD">&nbsp;</span>
                 <span id="iconMinus" class="icon">&nbsp;</span>
                 <span id="iconArrowLeft" class="icon">&nbsp;</span>
                 <span id="iconArrowDown" class="icon">&nbsp;</span>
@@ -83,23 +83,23 @@
     <tr{{#if isGroup}} class="isGroup" {{/if}}>
         <td class="order">{{ order }}</td>
         <td>{{ spaceLabel this }}<input type="text" size="25" id="editLabel" value="{{ label }}" />
-            <span id="iconActionMinus" class="icon">&nbsp;</span>
+            <span id="iconActionMinus" class="icon" title="REMOVE">&nbsp;</span>
             {{#if hasParent}}
-                <span id="iconActionPlus" class="icon">&nbsp;</span>
+                <span id="iconActionPlus" class="icon"title="ADD">&nbsp;</span>
             {{else}}
-                <span id="iconActionPlusPlus" class="icon">&nbsp;</span>
+                <span id="iconActionPlusPlus" class="icon" title="ADD CHILD">&nbsp;</span>
             {{/if}}
-            {{#if couldInline}}<span id="iconActionArrowLeft" class="icon">&nbsp;</span>{{/if}}
-            {{#if couldUp}}<span id="iconActionArrowUp" class="icon">&nbsp;</span>{{/if}}
-            {{#if couldDown}}<span id="iconActionArrowDown" class="icon">&nbsp;</span>{{/if}}
-            {{#if couldOutline}}<span id="iconActionArrowRight" class="icon">&nbsp;</span>{{/if}}
-            <span id="iconActionCheck" class="icon">&nbsp;</span>
-            <span id="iconActionX" class="icon">&nbsp;</span>{{#if showOptions}}<button id="hideOptions">less</button>{{else}}<button id="showOptions">more</button>{{/if}}
+            {{#if couldInline}}<span id="iconActionArrowLeft" class="icon" title="MOVE INLINE">&nbsp;</span>{{/if}}
+            {{#if couldUp}}<span id="iconActionArrowUp" class="icon" title="MOVE UP">&nbsp;</span>{{/if}}
+            {{#if couldDown}}<span id="iconActionArrowDown" class="icon" title="MOVE DOWN">&nbsp;</span>{{/if}}
+            {{#if couldOutline}}<span id="iconActionArrowRight" class="icon" title="MOVE OUTLINE">&nbsp;</span>{{/if}}
+            <span id="iconActionCheck" class="icon" title="SEND CHANGES">&nbsp;</span>
+            <span id="iconActionX" class="icon" title="CANCEL CHANGES">&nbsp;</span>{{#if showOptions}}<button id="hideOptions"> less options </button>{{else}}<button id="showOptions"> more options </button><input type="hidden" id="editFinish" value="{{ finish }}" />{{/if}}
         </td>
         <td class="start">
             <input type="text" size="9" id="editStart" value="{{ start }}" onchange="EtherPlan.Helper.edit_update_finish()" onclick="$('#editStart').datepicker({dateFormat: 'yy-mm-dd'}); $('#editStart').datepicker('show');" />
         </td>
-        <td class="value"><input type="text" size="2" id="editValue" value="{{ value }}" onchange="EtherPlan.Helper.edit_update_finish()" /></td>
+        <td class="value"><input type="text" size="2" id="editValue" value="{{ value }}" onchange="EtherPlan.Helper.edit_update_finish()" onkeypress="return EtherPlan.Helper.is_number_key(event)" /></td>
     </tr>
     {{#if showOptions}}
     <tr>
@@ -154,7 +154,7 @@
             <span id="iconActionXEntry" class="icon">&nbsp;</span>
         </td>
         <td class="start"><input type="text" size="9" id="entryStart" value="{{start}}" onchange="EtherPlan.Helper.entry_update_finish()"onclick="$('#entryStart').datepicker({dateFormat: 'yy-mm-dd'}); $('#entryStart').datepicker('show');" /></td>
-        <td class="value"><input type="text" size="2" id="entryValue" value="1" onchange="EtherPlan.Helper.entry_update_finish()" /></td>
+        <td class="value"><input type="text" size="2" id="entryValue" value="1" onchange="EtherPlan.Helper.entry_update_finish()" onkeypress="return EtherPlan.Helper.is_number_key(event)" /></td>
     </tr>
 </template>
 
