--- a/client/ep.html
+++ b/client/ep.html
@@ -30,7 +30,7 @@
         <thead>
             <tr>
                 <th id="headerOrder">ID</th>
-                <th>PART</th>
+                <th id="headerLabel">PART</th>
                 <th id="headerStart">START</th>
                 <th id="headerFinish">FINISH</th>
                 <th id="headerValue">Δ</th>
